feat: add date parameters to PartyInstancesController.GetInstancesForParty
